@@ -1,3 +1,9 @@
+Designer MODELER-398
+====================
+
+ - Setting a sensor on a Web element does not work
+
+
 Designer MODELER-248
 ====================
 
